# chernobog

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  RAX_HYBRID.md  README.md  ida-cmake  test.c
.github/workflows/: build.yml
cmake/: build_provenance.hpp.in
cmake/toolchains/: windows-clang-msvc.cmake
ida-cmake/: README.md  idasdkConfig.cmake
ida-cmake/cmake/: compiler.cmake  platform.cmake
src/common/: arm64_branch.h  arm64_predicate.h  bitvector.h  compat.h  hexrays_compat.h  ida_memory.h  simd.h  string_recovery.h  z3_utils.h
src/deobf/: deobf_main.cpp  deobf_main.h  deobf_types.h  deobf_utils.cpp  execution_policy.hpp
src/deobf/analysis/: arch_utils.cpp  arch_utils.h  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  cfg_analysis.cpp  cfg_analysis.h  chain_simplify.cpp  chain_simplify.h  dependency_liveness.hpp  expr_simplify.cpp  expr_simplify.h  mop_utils.h  opaque_eval.cpp  opaque_eval.h  pattern_fuzzer.cpp  pattern_fuzzer.h  pattern_match.cpp  pattern_match.h  pattern_storage.cpp  pattern_storage.h  stack_tracker.cpp  stack_tracker.h  switch_dispatch_classifier.hpp  z3_solver.cpp  z3_solver.h
src/deobf/handlers/: block_merge.cpp  block_merge.h  bogus_cf.cpp  bogus_cf.h  const_decrypt.cpp  const_decrypt.h  ctree_const_fold.cpp  ctree_indirect_call.cpp  ctree_indirect_call.h  ctree_string_decrypt.cpp  ctree_string_decrypt.h  ctree_switch_fold.cpp  ctree_switch_fold.h  deflatten.cpp  deflatten.h  global_const.cpp  global_const.h  hikari_cfg.cpp  hikari_cfg.h  hikari_wrapper.cpp  hikari_wrapper.h  identity_call.cpp  identity_call.h  indirect_branch.cpp  indirect_branch.h  indirect_call.cpp  indirect_call.h  jump_optimizer.cpp  jump_optimizer.h  mba_simplify.cpp  mba_simplify.h  native_opaque.cpp  native_opaque.h  objc_resolve.cpp  objc_resolve.h  peephole.cpp  peephole.h  ptr_resolve.cpp  ptr_resolve.h  recurrent_switch.cpp  (+17 more)
src/deobf/rules/: jump_rules.cpp  jump_rules.h  pattern_rule.cpp  pattern_rule.h  rule_registry.cpp  rule_registry.h  rule_verifier.cpp  rule_verifier.h  rules_add.cpp  rules_add.h  rules_and.cpp  rules_and.h  rules_misc.cpp  rules_misc.h  rules_or.cpp  rules_or.h  rules_predicate.cpp  rules_predicate.h  rules_sub.cpp  rules_sub.h  rules_xor.cpp  rules_xor.h
src/hybrid/: abi_policy.cpp  abi_policy.hpp  call_summary.cpp  call_summary.hpp  call_summary_policy.cpp  call_summary_policy.hpp  decoder_core.cpp  decoder_core.hpp  emu_driver.cpp  emu_driver.hpp  emu_input.hpp  emulation_rax_executor.cpp  emulation_rax_executor.hpp  emulation_workers.cpp  emulation_workers.hpp  entry_state.cpp  entry_state.hpp  evidence.cpp  evidence.hpp  hybrid_config.cpp  hybrid_config.hpp  program_model.cpp  program_model.hpp  program_model_core.cpp  rax_loader.cpp  rax_loader.hpp  session.cpp  session.hpp  smir_analysis.cpp  smir_analysis.hpp  static_analysis.cpp  static_analysis.hpp  z3_bridge.cpp  z3_bridge.hpp
src/ida_analysis/: analysis_config.cpp  analysis_config.hpp  early_hexrays.cpp  early_hexrays.hpp  evidence_apply.cpp  evidence_apply.hpp  get_pc_ida.cpp  get_pc_ida.hpp  ida_sdk_compat.hpp  native_classifier.cpp  native_classifier.hpp  native_engine.cpp  native_engine.hpp
src/plugin/: component_registry.cpp  component_registry.h  deobf_plugin.cpp
tests/: catalog_tests.cpp  core_tests.cpp  hybrid_tests.cpp  ida_cff_detector_smoke.py  ida_cff_plugin_probe.py  ida_cff_switch_probe.py  ida_cff_transition_probe.py  ida_decompile_probe.py  ida_early_constants_smoke.py  ida_early_hexrays_acprotect_smoke.py  ida_early_hexrays_smoke.py  ida_interr_scan.py  ida_native_negative_smoke.py  ida_rax_deobf_smoke.py  ida_rax_gui_lifecycle_smoke.py  ida_rax_smoke.py  run_ida_smoke.py  run_tests.sh  test_components.sh  test_individual_functions.sh  verify_windows_pe.py  z3_tests.cpp
